<resources>
    <!--***********************************-->
    <!--    String pour l'activité main    -->
    <!--***********************************-->
    <string name="app_name">GameBoard</string>
    <string name="search_game">Rechercher un jeu</string>
    <string name="new_game">Ajouter un jeu</string>
    <string name="new_location">Ajouter un lieu</string>
    <string name="import_export_database">Importer ou Exporter les jeux</string>


    <!--***********************************-->
    <!--  String pour l'activité NewGame   -->
    <!--***********************************-->

    <string name="new_game_title">Nouveau Jeu</string>
    <string name="add_new_game_data_base_title">Nouveau Jeu</string>
    <string name="new_game_name_edit_text">Entrez le nom du jeu</string>
    <string name="new_game_nb_player_spinner">Nombre de joueur au maximum</string>
    <string name="new_game_duration_spinner">Temps moyen de jeu</string>
    <string name="new_game_comments_edit_text">Commentaire concernant le jeu</string>
    <string name="new_game_already_played_check_box">Coché si déjà joué</string>
    <string name="new_game_add_button">Ajouter</string>
    <string name="new_game_name_empty_error">Vous devez entrer un nom de jeu non vide</string>
    <string name="error_insert_game_data_base">Une erreur est survenue lors de l\'ajout du jeu</string>
    <string name="new_game_error_get_id_place">L\Id de la place n\a pas pu etre trouve</string>
    <string name="new_game_error_insert_link_place">Une erreur est survenue lors de l\insertion dans la table LGP</string>
    <string name="new_game_type_text_view">Complexité du jeu</string>
    <string name="new_game_to_test">Jeu à tester</string>
    <string-array name="new_game_nb_player_populate_spinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10 +</item>
    </string-array>
    <string-array name="new_game_duration_populate_spinner">
        <item>10 min</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>45 min</item>
        <item>60 min</item>
        <item>75 min</item>
        <item>90 min</item>
        <item>120 min</item>
        <item>180 min</item>
    </string-array>



    <!--***********************************-->
    <!-- String pour l'activité NewLocation-->
    <!--***********************************-->
    <string name="new_location_title">Nouveau Lieu</string>
    <string name="enter_new_location_edit_text">Entrer le nom du lieu</string>
    <string name="submit_new_location_button">Ajouter</string>
    <string name="place_already_exist">Un lieu avec ce nom existe déjà</string>
    <string name="add_new_place_success">Le lieu a bien été ajouté</string>
    <string name="add_new_place_fail">Une erreur est survenue lors de l\'ajout</string>

    <!--***********************************-->
    <!-- String pour l'activité SearchGame -->
    <!--***********************************-->
    <string name="search_game_title">Trouver un Jeu</string>
    <string name="search_game_name_edit_text">Nom du jeu recherché</string>
    <string name="search_game_nb_min_player_text_view">Nombre minimum de joueurs</string>
    <string name="search_game_duration_max_text_view">Durée maximale du jeu</string>
    <string name="search_game_new_game_text_view">Nouveau jeu</string>
    <string name="search_game_submit_button">Rechercher</string>
    <string name="search_game_want_to_test">Jeu à tester</string>
    <string name="search_game_type">Type du jeu à chercher</string>
    <string name="search_game_one_field_needed">Veuillez remplir au moins un champ</string>
    <string name="search_game_no_result_with_type">Aucun résultat n\'a été trouvé avec le type demandé</string>
    <string name="search_game_no_result_with_other_type">Aucun résultat n\'a été trouvé</string>
    <string-array name="search_game_nb_min_player_spinner">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10 +</item>
    </string-array>
    <string-array name="search_game_duration_spinner">
        <item>10 min</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>45 min</item>
        <item>60 min</item>
        <item>75 min</item>
        <item>90 min</item>
        <item>120 min</item>
        <item>180 min</item>
    </string-array>
    <!--************************************-->
    <!-- String pour l'activité DisplayInfo -->
    <!--************************************-->
    <string name="display_info_title">Informations Jeux</string>
    <string name="display_info_modify_data_button">Modifier</string>
    <string name="display_info_played_text_view">Vous avez déjà joué au jeu : </string>
    <string name="display_info_want_to_test_text_view">Ce jeu fait parti des jeux à tester : </string>
    <string name="display_info_error_search_database">Une erreur est surveune.</string>
    <string name="display_info_error_search_game_type_lgt">Une erreur est survenue lors de la recherche du game_type dans la table lgt</string>
    <string name="display_info_error_search_name_type">Une erreur est survenue lors de la cherche du type trouvé lors de la requete précédente</string>
    <string name="display_info_type_game">Le type du jeu est </string>
    <string name="display_info_duration">Durée moyenne </string>
    <string name="display_info_max_player">Nom maximum de joueurs </string>
    <string name="display_info_modify_plus_button">Modifier plus</string>
    <string name="display_info_delete_button">Supprimer</string>
    <string name="display_info_allow_modification">Cliquez pour modifier des valeurs</string>
    <string name="display_info_where_to_find_results">Le jeu se trouve aux lieux </string>
    <string name="display_info_where_to_find_no_result">Aucun lieu n\'a été trouvé pour ce jeu</string>
    <string name="display_info_add_place_text_view">Lieu à ajouter</string>
    <string name="display_info_add_place_button">Ajouter un lieu</string>
    <string name="display_info_place_already_has_game_toast">Ce lieu est déjà enregistré pour ce jeu</string>
    <string name="display_info_place_added_toast">Ce lieu a bien été ajouté</string>
    <string name="display_info_error_place_added_toast">Une erreur est survenue lors de l\'ajout du lieu</string>

    <!--*******************************************-->
    <!-- String pour l'activité ModifyGameActivity -->
    <!--*******************************************-->
    <string name="modify_data_title">Mise à jour des informations</string>
    <string name="modify_data_error_updating_data">Une erreur est survenue lors de la mise à jour du jeu</string>
    <string name="modify_data_success">La modification a bien été prise en compte</string>

    <!--***********************************-->
    <!-- String pour l'activité deleteGame -->
    <!--***********************************-->
    <string name="delete_game_title">Supprimer le jeu</string>
    <string name="delete_game_ask_confirmation_text_view">Voulez vous vraiment supprimer le jeu </string>
    <string name="delete_game_yes_delete_button">Oui</string>
    <string name="delete_game_no_delete_button">Non</string>
    <string name="delete_game_error_delete_game">Une erreur est survenue lors de la suppression du jeu</string>
    <string name="delete_game_success_delete_game">Le jeu a bien été supprimé</string>

    <!--****************************************-->
    <!--  String pour l'activité ImportExport   -->
    <!--****************************************-->
    <string name="import_export_title">Importer/Exporter</string>
</resources>
