<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/delete_game_ask_confirmation_text_view"
        android:text="@string/delete_game_ask_confirmation_text_view"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/buttonStyle"
            android:id="@+id/delete_game_yes_button"
            android:text="@string/delete_game_yes_delete_button"/>
        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            style="@style/buttonStyle"
            android:id="@+id/delete_game_no_button"
            android:text="@string/delete_game_no_delete_button"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/delete_game_display_information_text_view"/>


</LinearLayout>
